--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -42,6 +42,11 @@
             <version>1.18.32</version>
             <scope>annotationProcessor</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 </project>
 
