--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>customer</module>
         <module>fraud</module>
+        <module>eureka</module>
     </modules>
 
     <properties>
